# clipboardplot

./: .gitignore  pyproject.toml
clipboardplot/: __init__.py  application.py
tests/: make_figure.py  test_clipboardplot.py
