[tool.poetry]
name = "clipboardplot"
version = "0.1.0"
description = "An extension to matplotlib that add a copy-to-clipboard funtion to the figure window"
authors = ["Thijs Maas <tpwmaas@gmail.com>"]
packages = [
    { include = "clipboardplot" }
]
keywords = ["clipboard", "matplotlib"]

[tool.poetry.dependencies]
python = "^3.6"
pyQT5 = "5.14"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
clipboardplot = "clipboardplot:main"
test = "tests.make_figure:figure"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"